<resources>
    <string name="app_name">BeaChat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="beacon_id">BeaconID:</string>
    <string name="major">MAJOR #:</string>
    <string name="minor">, MINOR #:</string>
    <string name="rssi">, RSSI:</string>
    <string name="tx_pw">, TX_PW:</string>
    <string name="proximity">Proximity:</string>

    <string name="refresh">Refresh beacon List</string>
    <string name="exp">exp </string>

    <string name="chat">chat</string>
    <string name="macro">macro</string>

    <string name="title_activity_login">LOGIN ACTIVITY</string>
    <string name="prompt_username">What\'s your nickname?</string>
    <string name="action_sign_in">Join</string>
    <string name="action_sign_in_short">Join</string>

    <string name="error_field_required">This field is required</string>
    <string name="chat_activity">chatting room</string>
</resources>
